<resources>
    <string name="app_name">laboratorio3</string>
    <string name="invalid_mail">Ingrese mail valido</string>
    <string name="invalid_password">Ingrese un password mayor a 6 digitos</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="agregar_contacto">Agregar contacto</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="recuperar_password">Recuperar password</string>
    <string name="coloca_tu_mail_a_recuperar">Coloca tu mail a recuperar</string>
    <string name="verificar_mail">Verificar mail</string>
    <string name="recuperar">Recuperar</string>
    <string name="correo">Correo</string>
    <string name="coloque_mail">Coloque mail</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
</resources>