<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".recuperarPassActivity">

    <TextView
        android:textSize="25sp"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/coloca_tu_mail_a_recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <EditText
        android:id="@+id/et_email_olvidado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/coloque_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/colorPrimary"
        android:importantForAutofill="no">

    </EditText>

    <Button
        android:id="@+id/btn_recuperar_email"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/recuperar_contrase_a"
        android:textColor="#fff"></Button>

</LinearLayout>