<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegistrarActivity">


    <EditText
        android:id="@+id/et_recuperacion_email"
        android:layout_width="267dp"
        android:layout_height="49dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="266dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/contrase_a"

        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_recuperacion_email"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp" />

    <EditText
        android:id="@+id/et_passconfirmation"
        android:layout_width="269dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/repetir_contrase_a"

        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/registrar"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passconfirmation"
        app:layout_constraintVertical_bias="0.186">


    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>